# sculpting-and-simulations-sample

code/: deformation.h  glslmathforcpp.h  kelvinlets.h  nonelastic.h  odesolvers.h
sample/: .gitignore  CMakeLists.txt
sample/src/: app.cpp  gl-api.hpp  gl-geometry.hpp  gl-imgui.cpp  gl-imgui.hpp  linalg_util.hpp  util.hpp  vr-hmd.cpp  vr-hmd.hpp
